--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1168,9 +1168,13 @@ button {
   }
 }
 
+.contact-h2 {
+  margin: 0;
+}
+
 .contact-heading-icon {
   font-size: 30px;
-  color: var(--gold);
+  color: #ceac68;
 }
 
 .contact-text {
