--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,18 +51,6 @@ header {
   }
 }
 
-/* .primary-whitespace-horizontal {
-  height: 30px;
-}
-
-.secondary-whitespace-horizontal {
-  height: 15px;
-}
-
-.primary-whitespace-vertical {
-  width: 20px;
-} */
-
 .flex {
   display: flex;
   flex-direction: column;
@@ -92,8 +80,6 @@ header {
   --white: #ffffff;
   --secondary-white: #ececec;
   --red: #c20203;
-  /* --gold: #ceac68;
-  --gold-hover: #c29741; */
   --gold-gradient: -webkit-linear-gradient(100deg, #ceac68, #ceac68, #f0d4a4, #ceac68, #ceac68);
   --box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%);
   --grey-hover: #bcbcbc;
@@ -101,20 +87,7 @@ header {
   /* --------------------------------- FONTS ------------------------------- */
   --primary_font: "Arial";
   --secondary_font: "Crimson Text", serif;
-  /* --tertiary_font: "Playfair Display", serif; */
 }
-
-/* .text-padding {
-  padding: 30px;
-}
-
-.text-padding-small {
-  padding-bottom: 10px;
-}
-
-.uppercase {
-  text-transform: uppercase;
-} */
 
 /* ------------------------------- BODY TEXT ----------------------------- */
 a,
@@ -315,6 +288,18 @@ button {
   backdrop-filter: blur(10px);
   padding: 1px 0; */
   margin-top: 140px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .cta-btn-section-container {
+    margin-top: 100px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .cta-btn-section-container {
+    margin-top: 100px;
+  }
 }
 
 .cta-section {
@@ -560,17 +545,6 @@ button {
 
 /* ======================================================================= */
 /* ================================ FOOTER =============================== */
-
-/* .flex-row {
-  display: flex;
-  flex-direction: row;
-}
-
-.flex-col {
-  display: flex;
-  flex-direction: column;
-} */
-/*---------------------*/
 .footer-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -678,189 +652,8 @@ button {
   bottom: 15px;
 }
 
-/*---------------------*/
-/* #footer-background {
-  height: 290px;
-  position: relative;
-  color: var(--gold);
-}
-
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  #footer-background {
-    height: 170px;
-  }
-}
-
-@media screen and (min-width: 951px) {
-  #footer-background {
-    height: 110px;
-  }
-}
-
-#footer-background::before {
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background-color: var(--primary-black);
-}
-
-.footer-flex {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  padding: 25px 0 10px 15px;
-}
-
-@media screen and (min-width: 951px) {
-  .footer-flex {
-    flex-direction: row;
-    padding: 0;
-    justify-content: space-between;
-    align-items: center;
-    left: 0%;
-    text-align: center;
-    top: 25%;
-    transform: translate(0%, 25%);
-    width: 80%;
-    margin: auto;
-  }
-}
-
-.footer-flex-row {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  gap: 20px;
-}
-
-@media screen and (min-width: 951px) {
-  .footer-flex-row {
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 60px;
-  }
-}
-
-.footer-logo {
-  width: 30px;
-  margin-bottom: 20px;
-}
-
-@media screen and (min-width: 951px) {
-  .footer-logo {
-    margin: 0;
-    width: 40px;
-  }
-}
-.footer-credit {
-  position: absolute;
-  bottom: 5px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  margin: auto;
-  color: #3d3d3d;
-  font-size: 11px;
-} */
-
-/* .copyright {
-  margin-bottom: 5px;
-} */
-
-/*-----------------*/
-
-/* .footer-center {
-  margin: 0;
-  position: relative;
-  left: 50%;
-  text-align: center;
-  top: 15%;
-  transform: translate(-50%, -12%);
-}
-
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  .footer-center {
-    top: 20%;
-    transform: translate(-50%, -5%);
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .footer-center {
-    top: 25%;
-    transform: translate(-50%, -50%);
-  }
-}
-
-.icon {
-  font-size: 22px;
-  color: var(--gold);
-}
-
-.icons {
-  display: flex;
-  flex-direction: row;
-  gap: 5px;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-flex-col {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 20px;
-}
-
-@media screen and (min-width: 951px) {
-  .footer-flex-col {
-    gap: 0;
-  }
-}
-
-.opening-hours-text-flex {
-  display: flex;
-  flex-direction: row;
-}
-
-.opening-hours-text {
-  display: flex;
-  flex-direction: column;
-}
-
-.opening-hours-text th {
-  line-height: 15px;
-}
-
-.footer-flex-opening-hours {
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .copyright {
-  font-size: 12px;
-  text-align: center;
-  margin-bottom: 5px;
-  font-family: var(--secondary_font);
-  background: var(--gold-gradient);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  position: absolute;
-  left: 0;
-  right: 0;
-  font-weight: 600;
-} */
-/* .footer-bottom {
-  position: absolute;
-  bottom: 30px;
-  left: 0;
-  right: 0;
-} */
 /* ======================================================================= */
-/* ========================== FRONT PAGE ============================== */
+/* ========================== FRONT PAGE ================================= */
 .hero {
   width: 100%;
   height: 505px;
@@ -925,7 +718,7 @@ button {
   }
 }
 
-/* FRONT PAGE - SALON SECTION */
+/* -------------------- FRONT PAGE - SALON SECTION ----------------------- */
 .displayboks {
   margin-bottom: 170px;
 }
@@ -951,9 +744,9 @@ button {
   margin: -242px auto 0 auto;
 }
 
-/* FRONT PAGE - OPENING HOURS SECTION*/
+/* ----------------- FRONT PAGE - OPENING HOURS SECTION ------------------ */
 .opening-hours-section {
-  margin: 120px auto;
+  margin: 100px auto;
   text-align: center;
 }
 
@@ -1122,12 +915,6 @@ button {
   margin: 5px 0;
 }
 
-/* @media screen and (min-width: 951px) {
-  .price-category__item {
-    margin: 5px 0;
-  }
-} */
-
 .product-name {
   width: 70%;
 }
@@ -1153,10 +940,10 @@ button {
 }
 
 /* ======================================================================= */
-/* ========================== ABOUT PAGE ============================== */
+/* ========================== ABOUT PAGE ================================= */
 
 /* ======================================================================= */
-/* ========================== CONTACT PAGE ============================== */
+/* ========================== CONTACT PAGE =============================== */
 .contact-heading {
   display: flex;
   flex-direction: row;
@@ -1176,7 +963,6 @@ button {
 
 .contact-heading-icon {
   font-size: 30px;
-  color: var(--gold);
 }
 
 .contact-text {
