--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,8 +203,8 @@ button {
   transition: 1s;
 }
 
-.primary-btn:hover>.button-rightpart-primary,
-.primary-btn:hover>.button-leftpart-primary {
+.primary-btn:hover > .button-rightpart-primary,
+.primary-btn:hover > .button-leftpart-primary {
   opacity: 0.5;
 }
 
@@ -253,7 +253,6 @@ button {
 }
 
 @media screen and (min-width: 951px) {
-
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -363,11 +362,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
+.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover>.cta_card_inner_background {
+.cta_card_inner:hover > .cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -937,7 +936,114 @@ button {
 
 /* ======================================================================= */
 /* ========================== ABOUT PAGE ================================= */
+.about-section-flex {
+  display: flex;
+  flex-direction: column-reverse;
+}
 
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .about-section-flex {
+    flex-direction: row;
+    gap: 100px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .about-section-flex {
+    flex-direction: row;
+    justify-content: center;
+    gap: 100px;
+  }
+}
+
+.about-section-img {
+  width: 100%;
+  margin: auto;
+  height: 310px;
+  object-fit: cover;
+  object-position: 0px 0px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .about-section-img {
+    max-width: 100%;
+    margin: 0;
+    max-height: 280px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .about-section-img {
+    max-width: 35%;
+    height: 460px;
+    max-height: 360px;
+    margin: 0;
+  }
+}
+
+.about-section-description {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+  gap: 5px;
+}
+
+@media screen and (min-width: 951px) {
+  .about-section-description {
+    width: 30%;
+    margin: 0;
+  }
+}
+
+.about-salon-section::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-repeat: no-repeat;
+  background-image: url(../images/salon-floor-anton-tzannis.webp);
+  background-size: cover;
+  background-position: center;
+  opacity: 60%;
+}
+
+.about-salon-section-description {
+  position: relative;
+  text-align: center;
+  width: 90%;
+}
+
+@media screen and (min-width: 951px) {
+  .about-salon-section-description {
+    width: 40%;
+  }
+}
+
+.about-section-description-heading {
+  text-align: center;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .about-section-description-heading {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .about-section-description-heading {
+    text-align: left;
+  }
+}
+
+.about-salon-section {
+  width: 100%;
+  height: 400px;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
 /* ======================================================================= */
 /* ========================== CONTACT PAGE =============================== */
 .contact-page {
