--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,8 +203,8 @@ button {
   transition: 1s;
 }
 
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary {
   opacity: 0.5;
 }
 
@@ -253,6 +253,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -362,11 +363,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
+.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background {
+.cta_card_inner:hover>.cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -1044,6 +1045,7 @@ button {
   place-items: center;
   position: relative;
 }
+
 /* ======================================================================= */
 /* ========================== CONTACT PAGE =============================== */
 .contact-page {
@@ -1059,23 +1061,54 @@ button {
 }
 
 .contact-information {
-  display: flex;
-  flex-direction: row;
-  gap: 50px;
-  margin-bottom: 50px;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 20px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "phone mail"
+    "address facebook";
+  margin: 0 auto 50px auto;
+  width: 100%;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .contact-information {
+    width: 80%;
+  }
 }
 
 @media screen and (min-width: 951px) {
   .contact-information {
-    margin-bottom: 0;
+    gap: 20px 0px;
+    width: 340px;
   }
 }
 
-.contact-information-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.facebook {
+  grid-area: facebook;
+}
+
+.address {
+  grid-area: address;
+}
+
+.mail {
+  grid-area: mail;
+}
+
+.phone {
+  grid-area: phone;
+}
+
+@media screen and (min-width: 951px) {
+
+  .phone,
+  .address {
+    width: 100px;
+    ;
+  }
 }
 
 .contact-heading {
@@ -1092,6 +1125,10 @@ button {
 
 .contact-icon {
   height: 20px;
+}
+
+.mail-icon {
+  height: 17px;
 }
 
 .contact-map {
