--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,9 @@ header {
     justify-content: center;
   }
 }
+.whitespace {
+  height: 30px;
+}
 
 :root {
   /* -------------------------------- COLORS ------------------------------- */
@@ -204,8 +207,8 @@ button {
   transition: 1s;
 }
 
-.primary-btn:hover>.button-rightpart-primary,
-.primary-btn:hover>.button-leftpart-primary {
+.primary-btn:hover > .button-rightpart-primary,
+.primary-btn:hover > .button-leftpart-primary {
   opacity: 0.5;
 }
 
@@ -258,7 +261,6 @@ button {
 }
 
 @media screen and (min-width: 951px) {
-
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -377,11 +379,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
+.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover>.cta_card_inner_background {
+.cta_card_inner:hover > .cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -1117,11 +1119,9 @@ button {
 }
 
 @media screen and (min-width: 951px) {
-
   .phone,
   .address {
     width: 100px;
-    ;
   }
 }
 
