--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,9 +69,6 @@ header {
     justify-content: center;
   }
 }
-.whitespace {
-  height: 30px;
-}
 
 :root {
   /* -------------------------------- COLORS ------------------------------- */
@@ -191,7 +188,6 @@ button {
   align-items: center;
   display: flex;
   justify-content: center;
-  transition: 1s;
 }
 
 .button-rightpart-primary {
@@ -204,12 +200,11 @@ button {
   display: flex;
   justify-content: center;
   font-size: 20px;
-  transition: 1s;
 }
 
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary {
-  opacity: 0.5;
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary {
+  background: var(--gold-gradient-hover);
 }
 
 .button-content-right {
@@ -261,6 +256,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -379,11 +375,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
+.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background {
+.cta_card_inner:hover>.cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -1119,9 +1115,11 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .phone,
   .address {
     width: 100px;
+    ;
   }
 }
 
