--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,8 +206,8 @@ button {
   font-size: 20px;
 }
 
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary {
   background: var(--gold-gradient-hover);
 }
 
@@ -260,6 +260,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -378,11 +379,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
+.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background {
+.cta_card_inner:hover>.cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -820,6 +821,7 @@ button {
     margin-bottom: 10px;
   }
 }
+
 .opening-hours-time {
   display: flex;
   flex-direction: row;
@@ -936,12 +938,12 @@ button {
   margin: 5px 0;
 }
 
-.product-name {
+.service {
   width: 70%;
 }
 
 @media screen and (min-width: 951px) {
-  .product-name {
+  .service {
     width: 100%;
   }
 }
@@ -1128,6 +1130,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .phone,
   .address {
     width: 100px;
