--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,7 +620,7 @@ button {
 }
 
 .footer-menu ul {
-  grid-area: menu-footer;
+  grid-area: footer-menu;
   display: flex;
   flex-direction: column;
   gap: 10px;
