--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ header {
 @media screen and (min-width: 951px) {
   .page-margin {
     width: 80%;
+    max-width: 1030px;
     margin: 5% auto;
   }
 }
@@ -206,13 +207,14 @@ button {
   font-size: 20px;
 }
 
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary {
   background: var(--gold-gradient-hover);
 }
 
 .button-content-right {
   filter: drop-shadow(0 0 5px var(--primary-black));
+  width: 16px;
 }
 
 .hero-btn-container {
@@ -260,6 +262,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -378,11 +381,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
+.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background {
+.cta_card_inner:hover>.cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -914,6 +917,8 @@ button {
     "haircolor";
   width: 100%;
   height: 1310px;
+  margin: 20px auto 0 auto;
+  justify-content: center;
 }
 
 .haircolor {
@@ -937,7 +942,6 @@ button {
       "haircolor haircolor";
     height: 780px;
     max-width: 1000px;
-    margin: 0 auto;
   }
 }
 
@@ -1006,6 +1010,10 @@ button {
     grid-template-rows: 1fr 1fr;
     gap: 0px 6%;
   }
+}
+
+.price_heading {
+  margin-bottom: 0;
 }
 
 /* ======================================================================= */
@@ -1176,6 +1184,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .phone,
   .address {
     width: 100px;
