--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -214,7 +214,8 @@ button {
 
 .button-content-right {
   filter: drop-shadow(0 0 5px var(--primary-black));
-  width: 16px;
+  /* width: 16px; */
+  font-size: 20px;
 }
 
 .hero-btn-container {
