--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,7 @@ header {
   --gold-gradient-hover: -webkit-linear-gradient(100deg, #a98c54, #a98c54, #d0b990, #a98c54, #a98c54);
   --box-shadow: 0px 3px 8px 0px rgb(0 0 0 / 40%);
   --grey-hover: #bcbcbc;
+  --grey-active: #4d4d4d;
   --black-transparent: #1c1c1cdb;
   /* --------------------------------- FONTS ------------------------------- */
   --primary_font: "Arial";
@@ -207,8 +208,8 @@ button {
   font-size: 20px;
 }
 
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary {
   background: var(--gold-gradient-hover);
 }
 
@@ -262,6 +263,7 @@ button {
 }
 
 @media screen and (min-width: 951px) {
+
   .hero-btn,
   .gradient-border-mask {
     margin: 0;
@@ -380,11 +382,11 @@ button {
   border-radius: 0 0 5px 5px;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background > .ctadetails {
+.cta_card_inner:hover>.cta_card_inner_background>.ctadetails {
   display: block;
 }
 
-.cta_card_inner:hover > .cta_card_inner_background {
+.cta_card_inner:hover>.cta_card_inner_background {
   width: 100%;
   height: 100%;
   border-radius: 5px;
@@ -504,6 +506,10 @@ button {
   }
 }
 
+.active {
+  color: var(--grey-active);
+}
+
 /* ------------------------- BURGER MENU SYMBOL -------------------------- */
 .change {
   display: block !important;
@@ -604,23 +610,6 @@ footer {
     height: 130px;
   }
 }
-
-/* .footer-background {
-  height: 270px;
-  background-color: var(--primary-black);
-}
-
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  .footer-background {
-    height: 150px;
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .footer-background {
-    height: 145px;
-  }
-} */
 
 .footer-menu ul {
   grid-area: footer-menu;
@@ -1198,6 +1187,7 @@ footer {
 }
 
 @media screen and (min-width: 951px) {
+
   .phone,
   .address {
     width: 100px;
@@ -1347,6 +1337,7 @@ footer {
 }
 
 @media screen and (min-width: 951px) {
+
   .slideshow-arrow-left:hover,
   .slideshow-arrow-right:hover,
   .products-close-popup:hover {
@@ -1440,6 +1431,7 @@ footer {
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
+
   .slideshow-arrow-left,
   .slideshow-arrow-right {
     display: inline;
@@ -1450,6 +1442,7 @@ footer {
 }
 
 @media screen and (min-width: 951px) {
+
   .slideshow-arrow-left,
   .slideshow-arrow-right {
     display: inline;
